Squashed commit of the following:
    - Value update fixes.